--- a/salesorderts/webapp/i18n/i18n_en.properties
+++ b/salesorderts/webapp/i18n/i18n_en.properties
@@ -10,4 +10,6 @@ appDescription=App to manage Sales Order
 #XTIT: Main view title
 title=App to manage Sales Order
 
+customerName=Customer Name
+
 welcomeMsg=Welcome {0}
