--- a/salesorderts/webapp/i18n/i18n_pt.properties
+++ b/salesorderts/webapp/i18n/i18n_pt.properties
@@ -13,3 +13,56 @@ title=App para gerenciar Ordens de Venda
 customerName=Nome do Cliente
 
 welcomeMsg=Bem vindo {0}
+
+SalesOrderID=Ordem ID
+CustomerID=Cliente ID
+CreationDatTime=Data e Hora de crição
+CreatedBy=Criado Por
+TotalItems=Total Itens
+TotalFreight=Total Frete
+TotalOrder=Total Ordem
+Status=Status
+
+StatusN=Novo
+StatusL=Forncecido
+StatusF=Solicitado
+StatusC=Cancelado
+
+SalesOrderItemNumber=Item ID
+Material=Material
+Description=Descrição
+Quantity=Quantidade
+UnitPrice=Preço Unitário
+TotalPrice=Preço Total
+
+OrderField=Campo de Ordenação
+OrderType=Tipo
+Limite=Limite
+Ignore=Ignorar
+ASC=Crescente
+DESC=Descrescente
+
+Options=Opções
+
+btnNewOrder=Nova Ordem
+btnSave=Salvar
+btnDelete=Excluir
+btnSupplier=Fornecer
+btnInvoice=Faturar
+btnCancell=Cancelar
+
+#Messages
+deletedSuccessfully=Ordem excluída com sucesso
+errorDeleting=Erro ao excluir ordem
+deleteError=Erro durante exclusão
+onlyExistingOrderCanBeDeleted=Somente ordens existentes podem ser deletadas
+selectAtLeastOneItem=Selecione pelo menos um item
+errorUpdatingOrderWithMessage=Error updating order {0}={1}
+errorUpdatingOrder=Erro ao atualizar ordem {0}
+errorLoadingDialog=Erro ao carregar diálogo
+
+#Titles
+Information=Informação
+Close=Fechar
+Message=Mensagem
+Type=Tipo
