--- a/salesorderts/webapp/i18n/i18n_en.properties
+++ b/salesorderts/webapp/i18n/i18n_en.properties
@@ -13,3 +13,56 @@ title=App to manage Sales Order
 customerName=Customer Name
 
 welcomeMsg=Welcome {0}
+
+SalesOrderID=Order ID
+CustomerID=Customer ID
+CreationDatTime=Creation Date
+CreatedBy=Created By
+TotalItems=Total Items
+TotalFreight=Total Freight
+TotalOrder=Total Order
+Status=Status
+
+StatusN=New
+StatusL=Supplied
+StatusF=Invoiced
+StatusC=Canceled
+
+SalesOrderItemNumber=Item ID
+Material=Material
+Description=Description
+Quantity=Quantity
+UnitPrice=Unit Price
+TotalPrice=Total Price
+
+OrderField=Order
+OrderType=Type
+Limite=Limite
+Ignore=Ignore
+ASC=Ascending
+DESC=DEscending
+
+Options=Options
+
+btnNewOrder=New Order
+btnSave=Save
+btnDelete=Delete
+btnSupplier=Supplier
+btnInvoice=Invoice
+btnCancell=Cancell
+
+#Messages
+deletedSuccessfully=Order deleted successfully
+errorDeleting=Error deleting order
+deleteError=Error during order deletion
+onlyExistingOrderCanBeDeleted=Only existing orders can be deleted
+selectAtLeastOneItem=Select at least one item
+errorUpdatingOrderWithMessage=Error updating order {0}={1}
+errorUpdatingOrder=Error updating order {0}
+errorLoadingDialog=Error loading dialog
+
+#Titles
+Information=Information
+Close=Close
+Message=Message
+Type=Type
