Deploy and devops

--- a/salesorderts/webapp/i18n/i18n.properties
+++ b/salesorderts/webapp/i18n/i18n.properties
@@ -34,6 +34,7 @@ Description=Description
 Quantity=Quantity
 UnitPrice=Unit Price
 TotalPrice=Total Price
+CreationDateTime=Creation Date Time
 
 OrderField=Order
 OrderType=Type
@@ -50,6 +51,7 @@ btnDelete=Delete
 btnSupplier=Supplier
 btnInvoice=Invoice
 btnCancell=Cancell
+btnNewItem=New Item
 
 #Messages
 deletedSuccessfully=Order deleted successfully
