--- a/salesorderts/webapp/i18n/i18n_pt.properties
+++ b/salesorderts/webapp/i18n/i18n_pt.properties
@@ -34,6 +34,7 @@ Description=Descrição
 Quantity=Quantidade
 UnitPrice=Preço Unitário
 TotalPrice=Preço Total
+CreationDateTime=Data e hora de criação
 
 OrderField=Campo de Ordenação
 OrderType=Tipo
@@ -50,6 +51,7 @@ btnDelete=Excluir
 btnSupplier=Fornecer
 btnInvoice=Faturar
 btnCancell=Cancelar
+btnNewItem=Novo Item
 
 #Messages
 deletedSuccessfully=Ordem excluída com sucesso
