Deploy and Cloud Foundry

--- a/salesorderts/webapp/i18n/i18n.properties
+++ b/salesorderts/webapp/i18n/i18n.properties
@@ -68,3 +68,9 @@ Information=Information
 Close=Close
 Message=Message
 Type=Type
+
+#XFLD,39
+SalesManagerTs-manage.flpTitle=Sales Manager
+
+#XFLD,10
+SalesManagerTs-manage.flpSubtitle=Ts
